--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,6 +30,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="请输入用户名或电话"
+                    android:text="ddd"
                     android:textColor="@color/picture_color_black"/>
             </LinearLayout>
             <LinearLayout
