--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,5 +12,8 @@
         <item name="windowNoTitle">true</item>
         <item name="android:windowBackground">@color/picture_color_transparent</item>
     </style>
-
+    <style name="popuStyle">
+        <item name="android:windowEnterAnimation">@anim/popup_anim_in</item>
+        <item name="android:windowExitAnimation">@anim/popup_anim_out</item>
+    </style>
 </resources>
