--- a/app/src/main/res/layout/activity_my_publish.xml
+++ b/app/src/main/res/layout/activity_my_publish.xml
@@ -12,9 +12,19 @@
         android:orientation="vertical">
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/dp_5">
+            android:layout_height="@dimen/dp_44">
+
+            <ImageView
+                android:id="@+id/btn_back"
+                android:layout_width="@dimen/dp_50"
+                android:layout_height="match_parent"
+                android:layout_alignParentLeft="true"
+                android:focusable="false"
+                android:padding="@dimen/dp_10"
+                android:src="@drawable/ic_back"/>
+
             <TextView
+                android:id="@+id/tv_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -22,9 +32,12 @@
                 android:textColor="@color/textColorBlack"
                 android:textSize="@dimen/sp_20"/>
             <ImageView
+                android:visibility="gone"
                 android:id="@+id/iv_add"
                 android:layout_width="@dimen/dp_30"
                 android:layout_height="@dimen/dp_30"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="@dimen/dp_5"
                 android:src="@android:drawable/ic_input_add"
                 android:layout_alignParentRight="true"/>
         </RelativeLayout>
