--- a/app/src/main/res/layout/activity_share.xml
+++ b/app/src/main/res/layout/activity_share.xml
@@ -18,7 +18,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="输入分享的内容"
-                android:text="dddddd"
+                android:text=""
                 android:textColor="@color/textColorBlack"/>
         </RelativeLayout>
         <Button
