--- a/app/src/main/res/layout/fragment_partner.xml
+++ b/app/src/main/res/layout/fragment_partner.xml
@@ -14,7 +14,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="好友"
+            android:text="好友列表"
             android:gravity="center"
             android:textSize="@dimen/sp_20"
             android:padding="@dimen/dp_10"/>
