消息刷新等

--- a/app/src/main/res/layout/activity_my_publish.xml
+++ b/app/src/main/res/layout/activity_my_publish.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/cst_my_publish"
     tools:context=".activity.MyPublishActivity">
 
     <LinearLayout
