--- a/app/src/main/res/layout/fragment_partner.xml
+++ b/app/src/main/res/layout/fragment_partner.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.PartnerFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -11,22 +12,21 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="好友列表"
-            android:gravity="center"
-            android:textSize="@dimen/sp_20"
-            android:padding="@dimen/dp_10"/>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_1"
-            android:background="@color/lineGrey"/>
-
-        <androidx.recyclerview.widget.RecyclerView
+        <com.scwang.smartrefresh.layout.SmartRefreshLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/rcv_part"/>
+            android:id="@+id/srf_content">
+            <com.scwang.smartrefresh.layout.header.ClassicsHeader
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srlTextLoading="正在刷新.."
+                app:srlTextFinish="刷新完成"
+                app:srlTextPulling="下拉刷新"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/rcv_part"/>
+        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
     </LinearLayout>
 
 </FrameLayout>
