--- a/app/src/main/res/layout/fragment_social_public.xml
+++ b/app/src/main/res/layout/fragment_social_public.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/fl_public"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.SocialPublic">
 
@@ -12,19 +13,22 @@
         android:orientation="vertical">
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/dp_5">
+            android:layout_height="@dimen/dp_40"
+            android:padding="@dimen/dp_5"
+            android:background="@color/color_f4f4f4">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:text="公众分享"
+                android:layout_centerVertical="true"
                 android:textColor="@color/textColorBlack"
                 android:textSize="@dimen/sp_20"/>
             <ImageView
                 android:id="@+id/iv_add"
                 android:layout_width="@dimen/dp_30"
                 android:layout_height="@dimen/dp_30"
+                android:layout_centerVertical="true"
                 android:src="@android:drawable/ic_input_add"
                 android:layout_alignParentRight="true"/>
         </RelativeLayout>
