--- a/app/src/main/res/layout/activity_people_profile.xml
+++ b/app/src/main/res/layout/activity_people_profile.xml
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:textSize="@dimen/sp_20"
-            android:text="name"
+            android:text=""
             android:textColor="@color/textColorBlack"
             android:id="@+id/tv_name"/>
         <LinearLayout
@@ -44,8 +44,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/sp_15"
-                android:text="女"
+                android:text=""
                 android:id="@+id/tv_sex"/>
+            <TextView
+                android:layout_marginLeft="@dimen/dp_10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/sp_13"
+                android:id="@+id/tv_age"
+                android:text=""/>
         </LinearLayout>
 
         <LinearLayout
@@ -76,7 +83,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dp_10"
-                    android:text="这是个人描述"
+                    android:text=""
                     android:maxLines="4"
                     android:ellipsize="end"
                     android:textSize="@dimen/sp_15" />
@@ -131,7 +138,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="添加好友"
+                android:text="关注"
                 android:gravity="center"
                 android:padding="@dimen/dp_10"
                 android:background="@drawable/grey_bg"
