--- a/app/src/main/res/layout/partner_item_layout.xml
+++ b/app/src/main/res/layout/partner_item_layout.xml
@@ -1,21 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:background="@color/white">
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_1"
-        android:background="@color/whiteGrey"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="@dimen/dp_10">
         <tk.com.sharemusic.myview.CircleImage
-            android:layout_width="@dimen/dp_50"
-            android:layout_height="@dimen/dp_50"
+            android:layout_width="@dimen/dp_40"
+            android:layout_height="@dimen/dp_40"
             android:id="@+id/iv_head"
             android:src="@drawable/default_head_boy"/>
         <LinearLayout
@@ -29,7 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/sp_15"
-                android:text="挨打的"
+                android:text=""
                 android:textColor="@color/textColorBlack"/>
             <TextView
                 android:id="@+id/tv_des"
@@ -37,10 +33,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/sp_12"
-                android:text="挨打的"
+                android:text=""
                 android:maxLines="1"
                 android:ellipsize="end"
                 android:textColor="@color/textColorGrey"/>
         </LinearLayout>
+
     </LinearLayout>
-</RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_1"
+        android:background="@color/color_f4f4f4"/>
+</LinearLayout>
