--- a/app/src/main/res/layout/social_public_item_layout.xml
+++ b/app/src/main/res/layout/social_public_item_layout.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="@dimen/dp_10">
+    android:padding="@dimen/dp_10"
+    android:background="@color/white"
+    android:layout_marginTop="@dimen/dp_2"
+    android:layout_marginBottom="@dimen/dp_2">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_1"
-        android:background="@color/whiteGrey"/>
     <LinearLayout
         android:id="@+id/ll_share_people"
         android:layout_width="match_parent"
@@ -20,18 +20,30 @@
             android:src="@drawable/default_head_boy"
             android:id="@+id/iv_head"/>
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginLeft="@dimen/dp_20"
             android:layout_gravity="center_vertical">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/tv_name"
-                android:textSize="@dimen/sp_18"
-                android:textColor="@color/textColorBlack"
-                android:text="王小二"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tv_name"
+                    android:textSize="@dimen/sp_18"
+                    android:layout_centerVertical="true"
+                    android:textColor="@color/textColorBlack"
+                    android:text="王小二"/>
+                <ImageView
+                    android:id="@+id/iv_more"
+                    android:layout_alignParentRight="true"
+                    android:layout_width="@dimen/dp_30"
+                    android:layout_height="@dimen/dp_20"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_more_choose"/>
+            </RelativeLayout>
             <TextView
                 android:id="@+id/tv_time"
                 android:layout_marginTop="@dimen/dp_5"
@@ -72,19 +84,54 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_alignParentRight="true">
-            <ImageView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/goods_bg"/>
+                android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/iv_good"
+                    android:layout_gravity="center_vertical"
+                    android:layout_width="@dimen/dp_20"
+                    android:layout_height="@dimen/dp_20"
+                    android:src="@drawable/goods_bg"/>
+                <TextView
+                    android:id="@+id/tv_goods"
+                    android:layout_marginLeft="@dimen/dp_5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#cdcdcd"
+                    android:textSize="@dimen/sp_10"
+                    android:layout_gravity="bottom"
+                    android:text="265"/>
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/iv_review"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginLeft="@dimen/dp_20">
+                <ImageView
+                    android:layout_gravity="center_vertical"
+                    android:layout_width="@dimen/dp_20"
+                    android:layout_height="@dimen/dp_20"
+                    android:src="@drawable/review_bg"/>
+                <TextView
+                    android:id="@+id/tv_review"
+                    android:layout_marginLeft="@dimen/dp_5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#cdcdcd"
+                    android:textSize="@dimen/sp_10"
+                    android:layout_gravity="bottom"
+                    android:text="265"/>
+            </LinearLayout>
             <ImageView
+                android:visibility="gone"
+                android:id="@+id/iv_share"
                 android:layout_marginLeft="@dimen/dp_20"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/review_bg"/>
-            <ImageView
-                android:layout_marginLeft="@dimen/dp_20"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_width="@dimen/dp_20"
+                android:layout_height="@dimen/dp_20"
                 android:src="@drawable/share_bg"/>
         </LinearLayout>
     </RelativeLayout>
@@ -93,10 +140,18 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="@dimen/dp_5"
-        android:background="@color/whiteBg">
+        android:id="@+id/ll_goods"
+        android:layout_marginTop="@dimen/dp_5"
+        android:background="@color/white">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/picture_color_f2"/>
         <com.google.android.flexbox.FlexboxLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            app:flexWrap="wrap"
             android:id="@+id/flex_good"/>
     </LinearLayout>
 </LinearLayout>
