--- a/app/src/main/res/layout/item_chat_content.xml
+++ b/app/src/main/res/layout/item_chat_content.xml
@@ -33,7 +33,7 @@
                 android:layout_width="@dimen/dp_50"
                 android:layout_height="@dimen/dp_50"
                 android:layout_marginTop="@dimen/dp_5"
-                android:src="@drawable/default_head_boy"/>
+                android:src="@drawable/default_head_girl"/>
         </LinearLayout>
 
         <RelativeLayout
@@ -64,13 +64,13 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:background="@drawable/ic_dialogbox"
-                    android:gravity="left"
+                    android:gravity="left|center"
                     android:text=""
                     android:paddingLeft="@dimen/dp_10"
-                    android:paddingTop="@dimen/dp_15"
+                    android:paddingTop="@dimen/dp_10"
                     android:paddingBottom="@dimen/dp_10"
-                    android:paddingRight="@dimen/dp_30"
-                    android:textColor="@color/white"
+                    android:paddingRight="@dimen/dp_15"
+                    android:textColor="@color/textColorBlack"
                     android:textSize="@dimen/sp_14"
                     android:visibility="visible"/>
 
@@ -86,10 +86,10 @@
                     android:singleLine="true"
                     android:text="1'"
                     android:paddingLeft="@dimen/dp_10"
-                    android:paddingTop="@dimen/dp_15"
+                    android:paddingTop="@dimen/dp_10"
                     android:paddingBottom="@dimen/dp_10"
-                    android:paddingRight="@dimen/dp_30"
-                    android:textColor="@color/white"
+                    android:paddingRight="@dimen/dp_15"
+                    android:textColor="@color/textColorBlack"
                     android:textSize="@dimen/sp_14"
                     android:visibility="gone"/>
 
@@ -134,6 +134,7 @@
                 android:id="@+id/iv_avatar_left"
                 android:layout_width="@dimen/dp_50"
                 android:layout_height="@dimen/dp_50"
+                android:layout_marginTop="@dimen/dp_5"
                 android:src="@drawable/default_head_girl"/>
         </LinearLayout>
 
@@ -155,7 +156,7 @@
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_10"
+                android:layout_marginTop="@dimen/dp_5"
                 android:layout_below="@+id/tv_time_left">
 
                 <TextView
@@ -163,13 +164,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/ic_dialogbox2"
-                    android:gravity="left"
+                    android:gravity="left|center"
                     android:text=""
-                    android:paddingTop="@dimen/dp_15"
+                    android:paddingTop="@dimen/dp_10"
                     android:paddingLeft="@dimen/dp_15"
-                    android:paddingRight="@dimen/dp_5"
+                    android:paddingRight="@dimen/dp_10"
                     android:paddingBottom="@dimen/dp_10"
-                    android:textColor="@color/textColorGrey"
+                    android:textColor="@color/textColorBlack"
                     android:textSize="@dimen/sp_14"
                     android:visibility="visible"/>
 
@@ -183,11 +184,11 @@
                     android:gravity="center|right"
                     android:singleLine="true"
                     android:text="1'"
-                    android:paddingTop="@dimen/dp_15"
+                    android:paddingTop="@dimen/dp_10"
                     android:paddingLeft="@dimen/dp_15"
-                    android:paddingRight="@dimen/dp_5"
+                    android:paddingRight="@dimen/dp_10"
                     android:paddingBottom="@dimen/dp_10"
-                    android:textColor="@color/textColorGrey"
+                    android:textColor="@color/textColorBlack"
                     android:textSize="@dimen/sp_14"
                     android:visibility="gone"/>
 
