--- a/app/src/main/res/layout/layout_chat_list_item.xml
+++ b/app/src/main/res/layout/layout_chat_list_item.xml
@@ -16,27 +16,65 @@
             android:id="@+id/iv_partner_head"/>
         <LinearLayout
             android:layout_marginLeft="@dimen/dp_10"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center_vertical">
-            <TextView
-                android:id="@+id/tv_partner_name"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/textColorBlack"
-                android:textSize="@dimen/sp_16"
-                android:text=""/>
-            <TextView
-                android:id="@+id/tv_partner_chat"
+                android:gravity="center_vertical"
+                android:layout_gravity="center_vertical">
+                <TextView
+                    android:id="@+id/tv_partner_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/textColorBlack"
+                    android:textSize="@dimen/sp_16"
+                    android:text=""
+                    android:layout_centerVertical="true"
+                    android:layout_toLeftOf="@+id/tv_chat_time"
+                    android:layout_alignParentLeft="true"
+                    android:ellipsize="end"/>
+                <TextView
+                    android:id="@+id/tv_chat_time"
+                    android:layout_centerVertical="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:textSize="@dimen/sp_13"
+                    android:text=""/>
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_20"
                 android:layout_marginTop="@dimen/dp_5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/textColorGrey"
-                android:textSize="@dimen/sp_13"
-                android:text=""
-                android:singleLine="true"
-                android:ellipsize="end"/>
+                android:gravity="center_vertical"
+                android:layout_gravity="center_vertical">
+                <TextView
+                    android:id="@+id/tv_partner_chat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/textColorGrey"
+                    android:layout_alignParentLeft="true"
+                    android:textSize="@dimen/sp_13"
+                    android:text=""
+                    android:singleLine="true"
+                    android:ellipsize="end"
+                    android:layout_centerVertical="true"
+                    android:layout_toLeftOf="@+id/tv_count" />
+                <TextView
+                    android:id="@+id/tv_count"
+                    android:layout_centerVertical="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:background="@drawable/round_red_bg"
+                    android:text=""
+                    android:visibility="gone"
+                    android:gravity="center"
+                    android:textColor="@color/white"/>
+            </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
     <View
