--- a/app/src/main/res/layout/layout_chat.xml
+++ b/app/src/main/res/layout/layout_chat.xml
@@ -92,18 +92,6 @@
 
         </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
-        <TextView
-            android:id="@+id/empty"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/color_f4f4f4"
-            android:gravity="center_horizontal"
-            android:paddingTop="@dimen/dp_70"
-            android:text="您已关注医生，可以给医生留言了!"
-            android:textColor="@color/hint_text"
-            android:textSize="@dimen/sp_12"
-            android:visibility="gone"/>
-
         <RelativeLayout
             android:id="@+id/layout_recording_mask"
             android:layout_width="match_parent"
@@ -268,5 +256,13 @@
             android:textColor="@color/light_gray"
             android:visibility="gone"/>
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/ll_show"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="bottom"
+        android:minHeight="@dimen/dp_211"
+        android:visibility="gone"/>
 
 </LinearLayout>
