--- a/app/src/main/res/layout/layout_click_menu.xml
+++ b/app/src/main/res/layout/layout_click_menu.xml
@@ -49,6 +49,38 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/ll_item_replay"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="gone">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_1"
+            android:background="@color/picture_color_f2"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingBottom="@dimen/dp_10"
+            android:paddingTop="@dimen/dp_10"
+            android:gravity="center_vertical"
+            android:id="@+id/ll_replay">
+            <ImageView
+                android:layout_width="@dimen/dp_20"
+                android:layout_height="@dimen/dp_20"
+                android:src="@drawable/ic_replay"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="回复"
+                android:textSize="@dimen/sp_15"
+                android:textColor="@color/textColorBlack"
+                android:layout_marginLeft="@dimen/dp_15"/>
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/ll_item_delete"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
