--- a/app/src/main/res/layout/social_public_item_layout.xml
+++ b/app/src/main/res/layout/social_public_item_layout.xml
@@ -85,9 +85,11 @@
             android:orientation="horizontal"
             android:layout_alignParentRight="true">
             <LinearLayout
+                android:id="@+id/ll_good"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
                 <ImageView
                     android:id="@+id/iv_good"
                     android:layout_gravity="center_vertical"
@@ -101,7 +103,6 @@
                     android:layout_height="wrap_content"
                     android:textColor="#cdcdcd"
                     android:textSize="@dimen/sp_10"
-                    android:layout_gravity="bottom"
                     android:text="265"/>
             </LinearLayout>
             <LinearLayout
@@ -109,6 +110,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:gravity="center_vertical"
                 android:layout_marginLeft="@dimen/dp_20">
                 <ImageView
                     android:layout_gravity="center_vertical"
@@ -122,7 +124,6 @@
                     android:layout_height="wrap_content"
                     android:textColor="#cdcdcd"
                     android:textSize="@dimen/sp_10"
-                    android:layout_gravity="bottom"
                     android:text="265"/>
             </LinearLayout>
             <ImageView
