--- a/app/src/main/res/layout/layout_chat_list_item.xml
+++ b/app/src/main/res/layout/layout_chat_list_item.xml
@@ -51,18 +51,26 @@
                 android:layout_marginTop="@dimen/dp_5"
                 android:gravity="center_vertical"
                 android:layout_gravity="center_vertical">
+                <ImageView
+                    android:id="@+id/iv_sending"
+                    android:visibility="gone"
+                    android:layout_width="@dimen/dp_15"
+                    android:layout_height="@dimen/dp_15"
+                    android:src="@drawable/ic_sending"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="@dimen/sp_10"/>
                 <TextView
+                    android:layout_toRightOf="@+id/iv_sending"
                     android:id="@+id/tv_partner_chat"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/textColorGrey"
-                    android:layout_alignParentLeft="true"
                     android:textSize="@dimen/sp_13"
                     android:text=""
                     android:singleLine="true"
                     android:ellipsize="end"
                     android:layout_centerVertical="true"
-                    android:layout_toLeftOf="@+id/tv_count" />
+                    android:layout_marginRight="@dimen/dp_20"/>
                 <TextView
                     android:id="@+id/tv_count"
                     android:layout_centerVertical="true"
@@ -70,7 +78,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:background="@drawable/round_red_bg"
-                    android:text=""
+                    android:text="99+"
                     android:visibility="gone"
                     android:gravity="center"
                     android:textColor="@color/white"/>
